BoaUAT/src/objects/Stock_Supplier__c.object
<CustomObject>
    <fields>
        <fullName>Discount_Percentage__c</fullName>
        <label>Discount Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Cost__c</fullName>
        <label>Last Cost</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_order_quantity__c</fullName>
        <label>Minimum order quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pack_Price__c</fullName>
        <label>Pack Price</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pack_Reference__c</fullName>
        <label>Pack Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_per_pack__c</fullName>
        <label>Quantity per pack</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Stock Item</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Stock Suppliers</relationshipLabel>
        <relationshipName>Stock_Suppliers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier_Code__c</fullName>
        <label>Supplier Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Description__c</fullName>
        <label>Supplier Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Customer doesn&apos;t exist or should be of supplier type.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Supplier</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Stock Suppliers</relationshipLabel>
        <relationshipName>Stock_Suppliers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Stock Supplier</label>
    <nameField>
        <displayFormat>SP ={000000}</displayFormat>
        <label>Stock Supplier Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Suppliers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>